# veylin

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  package.json
apps/desktop/scripts/: before-build.mjs  build.mjs  dev.mjs  ensure-server.mjs  ensure-sidecar.mjs  health-probe.mjs  prep-dev.mjs  run-server-dev.mjs  server-dev-singleton.mjs  server-dev-singleton.test.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  panel_menu.rs  sidecar.rs  web_view.rs
apps/server/: package.json
apps/server/scripts/: build-sidecar.mjs
apps/server/src/: agent-fork.ts  agent-packages-sync.ts  agent-run.ts  agent-task-await.test.ts  agent-task-runner.ts  agent-task-scoping.test.ts  agent-task-tool.ts  attachment-text.ts  audit.ts  auth-local.ts  auth.ts  automation-store.ts  automation-tools.ts  chat.test.ts  (+119 more)
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docs/: architecture.md  enterprise-ports.md  hooks-skills-plugins.md
examples/marketplace/: catalog.json
examples/scheduling-agent/: agent.yaml
examples/veylin/: agent.yaml
scripts/: dev-stop.mjs  dev-utils.mjs  dev.mjs  setup-github-repo.sh
(+372 files in other folders)
